traefik/pkg/provider/kubernetes/ingress/fixtures/Ingress-with-service-with-externalName-enabled.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
  - host: traefik.tchouk
    http:
      paths:
      - path: /bar
        backend:
          service:
            name: service1
            port:
              number: 8080
        pathType: Prefix

---
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: testing

spec:
  ports:
    - port: 8080
  clusterIP: 10.0.0.1
  type: ExternalName
  externalName: traefik.wtf
